Fixed Image Styling So it doesn't stretch

--- a/client/src/components/pages/ProjectPage/Tickets/TicketTable/TicketTable.scss
+++ b/client/src/components/pages/ProjectPage/Tickets/TicketTable/TicketTable.scss
@@ -65,6 +65,10 @@
 
                     .profile-pic {
                         width: 30px;
+                        height:30px;
+                        object-fit: cover;
+                        object-position: 50% 50%;
+                        border-radius:50%;
                         position:relative;
                         top: 5px;
                         left: .5vw;
